--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
 
             <div class="navbar-end">
                 <a class="navbar-item" href="https://bradleykennedy.co.uk/contact">
-                    <span class="icon gh-sponsor"><i class="fa-solid fa-messages-question"></i></span>
+                    <span class="icon gh-sponsor"><i class="fas fa-comment-dots"></i></span>
                     <span>Contact</span>
                 </a>
             </div>
